SERVER-89342 Capped allows batched inserts from oplog application

GitOrigin-RevId: 1d762b4125c87ace9579a6c2ef8c57980ba10345