jstests/noPassthrough/move_collection_create_options.js
@@ -140,8 +140,6 @@ const testCases = [
                 }
             });
         },
-        // TODO (SERVER-89342): moveCollection fails for capped collections.
-        expectedMoveCollectionError: ErrorCodes.OperationCannotBeBatched,
         // Cannot shard capped collections.
         expectedShardCollectionError: ErrorCodes.InvalidOptions,
     },
@@ -167,8 +165,6 @@ const testCases = [
                 }
             });
         },
-        // TODO (SERVER-89342): moveCollection fails for capped collections.
-        expectedMoveCollectionError: ErrorCodes.OperationCannotBeBatched,
         // Cannot shard capped collections.
         expectedShardCollectionError: ErrorCodes.InvalidOptions,
     },
